force-app/main/default/objects/Service_Ticket__c/Service_Ticket__c.object-meta.xml
<CustomObject>
    <label>Service Ticket</label>
    <nameField>
        <label>Service Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>