force-app/main/default/objects/Service_Ticket__c/fields/Machine_Asset__c.field-meta.xml
<CustomField>
    <fullName>Machine_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Machine Asset</label>
    <referenceTo>Machine_Asset__c</referenceTo>
    <relationshipLabel>Service Tickets</relationshipLabel>
    <relationshipName>Service_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>