force-app/main/default/objects/Service_Ticket__c/fields/Resolution_Time_Hours__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Time_Hours__c</fullName>
    <formula>(Closed_Date__c - CreatedDate) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resolution Time (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>