force-app/main/default/objects/Service_Ticket__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Hardware Issue</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
            <value>
                <fullName>Replacement Request</fullName>
            </value>
            <value>
                <fullName>Software Issue</fullName>
            </value>
            <value>
                <fullName>Warranty Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>