force-app/main/default/objects/Service_Ticket__c/validationRules/Closed_Tickets_Require_Resolution_Notes.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Tickets_Require_Resolution_Notes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c, &quot;Closed&quot;),
   ISBLANK(Resolution_Notes__c)
)</errorConditionFormula>
    <errorMessage>Please fill in the Resolution Notes before closing the ticket.</errorMessage>
</ValidationRule>