force-app/main/default/objects/Service_Ticket__c/validationRules/High_Priority_Tickets_Need_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>High_Priority_Tickets_Need_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Priority__c, &quot;High&quot;),
   ISBLANK(Description__c)
)</errorConditionFormula>
    <errorMessage>Please fill in the description for High Priority Tickets.</errorMessage>
</ValidationRule>